<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/smaller_margin"
        android:layout_marginTop="@dimen/smaller_margin"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight"
                android:text="@string/flight"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/size_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flightNo"
                android:layout_toEndOf="@+id/flight"
                android:layout_marginStart="@dimen/fab_margin"
                android:textColor="@color/black"
                android:layout_toStartOf="@+id/flightDate"
                android:textSize="@dimen/size_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flightDate"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="@dimen/size_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/flightNo"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/origion"
                        android:text="@string/origin"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flightOrigin"
                        android:layout_toEndOf="@+id/origion"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_medium"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/destination"
                        android:text="@string/destination"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flightDestination"
                        android:layout_toEndOf="@+id/destination"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_medium"/>
                    
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/departure"
                        android:text="@string/departure_scheduled"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flightDeparture"
                        android:layout_toEndOf="@+id/departure"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_medium"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/arrival"
                        android:text="@string/arrival_scheduled"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/flightArrival"
                        android:layout_toEndOf="@+id/arrival"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_medium"/>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>